[fe] Fix styling of code input at login
The extra margin setting is actually only needed in the unit host.

--- a/frontend/src/app/shared/components/code-input/code-input.component.scss
+++ b/frontend/src/app/shared/components/code-input/code-input.component.scss
@@ -4,7 +4,6 @@
 
   tc-code-text-field-form {
     padding: 0 40px;
-    margin: 0 auto;
   }
 
   .companion {
